[dependencies]
anyhow = "1.0"
chrono = {workspace = true, features = ["serde"]}
clap = {version = "4.5.28", features = ["derive"]}
http-body-util = "0.1"
hyper = {features = ["full"], version = "1.6"}
hyper-staticfile = "0.10.1"
hyper-util = {features = ["tokio"], version = "0.1"}
parking_lot = "0.12"
pyo3 = {workspace = true, optional = true}
serde_json = "1.0"
log.workspace = true
serde.workspace = true
tokio.workspace = true

[features]
python = ["dep:pyo3"]

[lib]
crate-type = ["cdylib", "lib"]
name = "daft_dashboard"

[lints]
workspace = true

[package]
name = "daft_dashboard"
edition.workspace = true
version.workspace = true

[target.'cfg(unix)'.dependencies]
fork = "0.2"
