[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5.0,<2.0.0"]

[project]
dependencies = []
name = "daft_dashboard"
requires-python = ">=3.9"
version = "0.1.0"

[project.scripts]
daft-dashboard = "daft_dashboard:_cli"

[tool.maturin]
features = ["python"]
module-name = "daft_dashboard"  # The name of your Rust module
python-source = "."  # This tells maturin to look for Python files at the root
