[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "icebridge"
description = "A Python Bridge to Apache Iceberg using Py4J"
authors = [{name="Eventual Inc.", email = "team@eventualcomputing.com"}]
license = {file="LICENSE"}
keywords = ["Iceberg", "Data Warehouse"]
dependencies = [
    "py4j == 0.10.9.5",
    "fsspec",
    "s3fs",
    "pyarrow == 8.0.0",
    "numpy >= 1.20",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]


[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]

[options.package_data]
icebridge = ["app-uber.jar"]

[tool.setuptools.dynamic]
version = {attr = "icebridge.VERSION"}
