[package]
name = "daft-ext-example"
edition = {workspace = true}
version = {workspace = true}

# We must export a cdylib for the extension to be loaded by Daft.
[lib]
name = "daft_ext_example_native"
crate-type = ["cdylib"]

# These are the only required dependencies for an extension.
[dependencies]
daft-ext = {path = "../../src/daft-ext"}
arrow-array = {workspace = true}
arrow-schema = {workspace = true}
