[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "daft-ext-example"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["daft"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages]
find = {where = ["."], include = ["daft_ext_example*"]}

[tool.setuptools.package-data]
daft_ext_example = ["*.so", "*.dylib", "*.dll"]
