[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "daft-ext-example"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["daft"]

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
manifest-path = "Cargo.toml"
python-packages = ["daft_ext_example"]
