[dependencies]
common-error = {path = "../common/error", default-features = false}
common-treenode = {path = "../common/treenode", default-features = false}
daft-dsl = {path = "../daft-dsl", default-features = false}
daft-schema = {path = "../daft-schema", default-features = false}
indexmap = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[lints]
workspace = true

[package]
edition = {workspace = true}
name = "daft-algebra"
version = {workspace = true}
