[dependencies]
daft-common = {workspace = true}
daft-core = {path = "../daft-core", version = "0.7.9", default-features = false}
daft-dsl = {path = "../daft-dsl", version = "0.7.9", default-features = false}
daft-schema = {path = "../daft-schema", version = "0.7.9", default-features = false}
indexmap = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[lints]
workspace = true

[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = {workspace = true}
name = "daft-algebra"
version = {workspace = true}
description = "Expression algebra and optimization rules for the Daft query engine"
