[dependencies]
daft-common-error = {path = "../common/error", default-features = false, version = "0.3.0-dev0"}
common-treenode = {path = "../common/treenode", default-features = false, version = "0.3.0-dev0"}
daft-core = {path = "../daft-core", default-features = false, version = "0.3.0-dev0"}
daft-dsl = {path = "../daft-dsl", default-features = false, version = "0.3.0-dev0"}
daft-schema = {path = "../daft-schema", default-features = false, version = "0.3.0-dev0"}
indexmap = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[lints]
workspace = true

[package]
edition = {workspace = true}
name = "daft-algebra"
repository = {workspace = true}
license = {workspace = true}
description = "Expression algebra for Daft"
version = {workspace = true}
