[dependencies]
common-error = {path = "../common/error", default-features = false}
daft-core = {path = "../daft-core", default-features = false}
daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
pyo3 = {workspace = true, optional = true}
sqlparser = {workspace = true}
snafu.workspace = true

[features]
python = [
  "dep:pyo3",
  "common-error/python",
  "daft-core/python",
  "daft-logical-plan/python"
]

[package]
name = "daft-catalog"
edition.workspace = true
version.workspace = true
