[dependencies]
common-error = {path = "../common/error", default-features = false}
daft-context = {path = "../daft-context", default-features = false}
daft-core = {path = "../daft-core", default-features = false}
daft-runners = {path = "../daft-runners", default-features = false}
daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
daft-micropartition = {path = "../daft-micropartition", default-features = false}
indexmap = {workspace = true}
common-pattern = {path = "../common/pattern"}
regex = {workspace = true}
pyo3 = {workspace = true, optional = true}
sqlparser = {workspace = true}
snafu.workspace = true

[features]
python = [
  "dep:pyo3",
  "common-error/python",
  "daft-context/python",
  "daft-core/python",
  "daft-logical-plan/python",
  "daft-micropartition/python",
  "daft-runners/python"
]

[package]
name = "daft-catalog"
edition.workspace = true
version.workspace = true
