[dependencies]
daft-common-error = {path = "../common/error", default-features = false, version = "0.3.0-dev0"}
daft-context = {path = "../daft-context", default-features = false, version = "0.3.0-dev0"}
daft-core = {path = "../daft-core", default-features = false, version = "0.3.0-dev0"}
daft-dsl = {path = "../daft-dsl", default-features = false, version = "0.3.0-dev0"}
daft-runners = {path = "../daft-runners", default-features = false, version = "0.3.0-dev0"}
daft-logical-plan = {path = "../daft-logical-plan", default-features = false, version = "0.3.0-dev0"}
daft-micropartition = {path = "../daft-micropartition", default-features = false, version = "0.3.0-dev0"}
indexmap = {workspace = true}
common-pattern = {path = "../common/pattern", version = "0.3.0-dev0"}
regex = {workspace = true}
pyo3 = {workspace = true, optional = true}
sqlparser = {workspace = true}
snafu.workspace = true

[features]
python = [
  "dep:pyo3",
  "daft-common-error/python",
  "daft-context/python",
  "daft-core/python",
  "daft-dsl/python",
  "daft-logical-plan/python",
  "daft-micropartition/python",
  "daft-runners/python"
]

[lints]
workspace = true

[package]
name = "daft-catalog"
repository = {workspace = true}
license = {workspace = true}
description = "Data catalog for Daft"
edition.workspace = true
version.workspace = true
