[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
name = "daft-checkpoint"
edition.workspace = true
version.workspace = true
description = "Checkpointing and state persistence for Daft"

[dependencies]
arrow-array = {workspace = true}
arrow-schema = {workspace = true}
async-trait = {workspace = true}
bytes = {workspace = true}
chrono = {workspace = true}
daft-common = {workspace = true}
daft-core = {path = "../daft-core", version = "0.7.9", default-features = false}
daft-scan = {path = "../daft-scan", version = "0.7.9", default-features = false}
daft-schema = {path = "../daft-schema", version = "0.7.9", default-features = false}
futures = {workspace = true}
parquet = {workspace = true}
pyo3 = {workspace = true, optional = true}
serde = {workspace = true}
serde_json = {workspace = true}
snafu = {workspace = true}

[dependencies.daft-io]
optional = true
path = "../daft-io"
version = "0.7.9"
default-features = false

[features]
python = ["dep:pyo3", "daft-common/python"]
s3 = ["daft-io"]
test-utils = []

[dev-dependencies]
daft-checkpoint = {path = ".", features = ["test-utils", "s3"]}
daft-core = {path = "../daft-core", version = "0.7.9", default-features = false}
futures = {workspace = true}
tempfile = "3.23.0"
tokio = {workspace = true, features = ["rt", "macros"]}

[lints]
workspace = true
