[dependencies]
clap = {version = "4.5", features = ["derive"], optional = true}
daft-dashboard = {path = "../daft-dashboard", optional = true}
console = "0.16"
pyo3 = {workspace = true, optional = true}
tokio = {workspace = true, optional = true}
tracing-subscriber = {workspace = true}

[features]
python = ["dep:pyo3", "dep:clap", "dep:tokio", "dep:daft-dashboard"]

[package]
name = "daft-cli"
edition.workspace = true
version.workspace = true
