[dependencies]
clap = {version = "4.5", features = ["derive"], optional = true}
daft-dashboard = {path = "../daft-dashboard", optional = true, version = "0.3.0-dev0"}
console = {workspace = true}
pyo3 = {workspace = true, optional = true}
tokio = {workspace = true, optional = true}
tracing-subscriber = {workspace = true}

[target.'cfg(unix)'.dependencies]
libc = {workspace = true}

[features]
python = ["dep:pyo3", "dep:clap", "dep:tokio", "dep:daft-dashboard"]

[lints]
workspace = true

[package]
name = "daft-cli"
publish = false
repository = {workspace = true}
license = {workspace = true}
edition.workspace = true
version.workspace = true
