[dependencies]
async-compression = {workspace = true}
tokio = {workspace = true}
url = {workspace = true}

[lints]
workspace = true

[package]
edition = {workspace = true}
name = "daft-compression"
repository = {workspace = true}
license = {workspace = true}
description = "Compression utilities for Daft"
version = {workspace = true}
